--- a/valoidation.ipynb
+++ b/valoidation.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pan card fraud detection- DataFlair\n",
+    
     "import os\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -380,7 +380,7 @@
    "outputs": [],
    "source": [
     "# Export the model\n",
-    "model.save(\"pan-card-fraud-detection-DataFlair.h5\")"
+    "model.save(\"validation.h5\")"
    ]
   }
  ],
